--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -1,13 +1,8 @@
-body {
-  overflow: hidden;
+.scroll-container,
+.scroll-area {
+  max-width: 100%;
   height: 100vh;
-}
-
-.scroll-container, .scroll-area {
-  max-width: 850px;
-  height:100vh;
   font-size: 60px;
-  margin: 0 auto;
 }
 
 .scroll-container {
@@ -17,15 +12,23 @@ body {
 
 .scroll-area {
   scroll-snap-align: start;
+}
+
+.scroll-container,
+.scroll-area {
+  margin: 0 auto;
+}
+
+.scroll-area {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* .main {
-  background-color: #E4AD7C;
+.scroll-area:nth-of-type(1) {
+  background: #E4AD7C;
 }
 
-.about {
-  background-color: #FCF0CC;
-} */
+.scroll-area:nth-of-type(2) {
+  background: #FCF0CC;
+}
