--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -21,10 +21,19 @@ body {
   justify-content: center;
 }
 
+/*--- Header Bars CSS ---*/
+
+.header-bar {
+  width: 100%;
+  height: 96px;
+  background-color: #A64253;
+  color: #FCF0CC;
+}
+
 /*--- About Cards CSS ---*/
 
 .content {
-  height: 90%;
+  height: 80%;
   background: #FCF0CC;
   text-align: center;
   padding: 48px 0;
