--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -18,6 +18,7 @@
 body {
   margin: 0;
   overflow: hidden;
+  font-family: Garamond, serif;
 }
 
 .scroll-container, .scroll-area {
@@ -109,11 +110,13 @@ body {
 
 .card__side--front {
   background-color: #fff;
+  font-size: .65em;
 }
 
 .card__side--back {
   color: #fff;
   transform: rotateY(180deg);
+  font-size: 16px;
 }
 
 .card__side--front-1, .card__side--back-1 {
@@ -138,7 +141,6 @@ body {
 
 .card__description {
   text-transform: uppercase;
-  font-size: .75em;
   text-align: center;
   padding-top: 50%;
   color: #FCF0CC;
