--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -117,6 +117,7 @@ body {
   color: #fff;
   transform: rotateY(180deg);
   font-size: 16px;
+  padding: 12px;
 }
 
 .card__side--front-1, .card__side--back-1 {
@@ -142,6 +143,13 @@ body {
 .card__description {
   text-transform: uppercase;
   text-align: center;
-  padding-top: 50%;
   color: #FCF0CC;
+}
+
+.card__side--front .card__description {
+  padding-top: 50%;
+}
+
+.card__side--back .card__description {
+  padding-top: 20%;
 }
