--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -54,24 +54,47 @@ body {
 .work-area {
   height: 90%;
   background: #E4AD7C;
-  text-align: center;
   padding: 48px 0;
   color: #A64253;
 }
 
+.mapping-internet {
+  height: 1.5em;
+  text-align: left;
+  box-sizing: border-box;
+  padding-left: .6em;
+  padding-top: .5%;
+}
+
+.mapping-wifi {
+  height: 6.75em;
+  margin-top: 2.5%;
+  text-align: center;
+}
+
 .mappings {
-  display: flex;
   justify-content: space-evenly;
-  height: inherit;
 }
 
 .mapping-internet, .mapping-wifi {
-  width: 45%;
-  position: relative;
-  height: inherit;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   perspective: 150em;
   border-radius: 25px;
   background-color: #FCF0CC;
+}
+
+/* --- Form Area --- */
+
+.isp {
+  font-size: 30px;
+  display: inline;
+  margin-left: 1em;
+}
+
+.isp label {
+  margin-left: 1em;
 }
 
 /*--- About Cards CSS ---*/
