--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -37,7 +37,7 @@ background-color: #E4AD7C;
 
     width: 90%;
     height: 90%;
-    margin: 5%;
+    margin: 0 5%;
     justify-content: center;
     align-items: center;
     overflow: hidden;
