--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -41,6 +41,7 @@ background-color: #E4AD7C;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    position: absolute;
 }
 
 /* --- Main Area --- */
